@@ -14,6 +14,8 @@
 
     * las/arch/x86_64/main.c: Added the INC instruction
 
+    * las/arch/x86_64/main.c: Added the OUT instruction
+
 
 2013-12-08  Hirochika Asai  <asai@scyphus.co.jp>
 
